ul alignment fixed

--- a/styles.css
+++ b/styles.css
@@ -286,7 +286,6 @@ body > footer > div.footer-container > div.footer-branding > p{
 .footer-links ul {
   list-style: none;
   padding: 0;
-  text-align: right;
 }
 
 .footer-links ul li {
